--- a/Home/css/login.css
+++ b/Home/css/login.css
@@ -1,193 +1,164 @@
+body {
+  font-family: "Nasalization", sans-serif;
+}
 
-header 
-{
+/* Header */
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 66px;
-  background-color:#D9D9D9 ;
+  background-color: #D9D9D9;
   z-index: 1;
-  
+  padding: 0 20px;
 }
 
-.logo
-{
-  position: absolute;
-  left: 20px;
-  display: inline-block;
+
+.logo {
+  display: flex;
+  align-items: center;
 }
-.Souk ,.Auto
-{
-  position: absolute;
+
+.logo img {
+  height: 40px;
+  margin-right: 10px;
+}
+
+.Souk,
+.Auto {
   font-size: 31px;
-  top: -16px;
   font-weight: bold;
 }
-.Souk 
-{
-  
-  
-  left: 3px;
+
+.Souk {
   color: #205375;
 }
 
-.Auto
-{ 
- 
-  left: 73px;
+.Auto {
   color: #ED6C15;
-
 }
 
-.Loggin
-{
-  position: absolute;
-  right: 50px;
-  top: -16px;
+.Loggin {
   font-size: 30px;
-  color: #102B3C  ;
+  color: #102B3C;
   font-weight: bold;
 }
 
-header::after {
-  content: "";
-  display: block;
-  height: 5px;
-  width: 100%;
-  background-color: #102B3C;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-}
 
 /* Section */
 
-  section
-  { 
-    /* background: url(../images/Login.png) no-repeat ;
-    background-size: cover;  */
-    position: absolute; 
-    width: 100%;
-    
-    left: 0%;
-    top: 66px;
-  }
+section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+}
 
+form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 30px;
+}
 
-  form
-  {
-    position: absolute;
-    top: 320px;
-  }
+h1 {
+  font-size: 45px;
+  color: #ED6C15;
+  margin-bottom: 10px;
+}
 
-  h1,h2,h3
-  {
-  
-    position: relative;
-    left: 5%;
-  }
+h2 {
+  font-size: 30px;
+  color: #205375;
+  margin-bottom: 50px;
+}
 
-  h1
-  {      
-      top: 20px;
-      color: #ED6C15;
-          
-  }
+h3 {
+  font-size: 23px;
+  color: #102B3C;
+  margin-bottom: 10px;
+}
 
-  h2
-  {  
-    /* top: 20px; */
-     color: #205375;
-     margin-bottom: 50px;
-  } 
+/* The form */
 
-  h3
-  {  
-     color: #102B3C;
-     font-size: 23px;
-  } 
+.info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 20px;
+}
 
-  /* The form */
-  .info
-  {
-    position: relative;
-    top: -300px;
-    left: 5%;
-    display: inline-block;
-  }
-
-  .info div
-  {
-    margin-bottom: 20px;
-    transition: transform 0.3s ease-in-out;
-  }
-
+.info div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 20px;
+  transition: transform 0.3s ease-in-out;
+}
 
 .info div:hover {
-
   transform: scale(1.05);
 }
 
-  .info input:not(.log)
-  {
-    width: 340px;
-    height: 30px;
-    border-radius: 10px;
-    background-color: #EFEFEF;
-    border: none;
-    padding: 5px 15px;
-  }
+.info input:not(.log) {
+  width: 340px;
+  height: 30px;
+  border-radius: 10px;
+  background-color: #EFEFEF;
+  border: none;
+  padding: 5px 15px;
+  margin-bottom: 10px;
+}
 
-  input::placeholder {
+input::placeholder {
+  font-size: 15px;
+  color: #999;
+}
 
-    font-size: 15px;
-    color: #999;
-  }
+input:focus {
+  outline: none;
+}
 
-  input:focus {
-    
-    outline: none;
-  }
+input:hover {
+  cursor: pointer;
+}
 
-  input:hover {
-    
-    cursor: pointer;
-  }
+/* Login button */
 
-  /* Login button */
-  .log
-  { 
-    position: relative;
-    left: 286px;
-    background-color: #ED6C15;
-    width: 84.71px;
-    height: 41px;
-    border: none;
-    border-radius: 10px;
-  }
+.log {
+  background-color: #ED6C15;
+  width: 84.71px;
+  height: 41px;
+  border: none;
+  border-radius: 10px;
+  color: white;
+  font-family: "Nasalization", sans-serif;
+  font-weight: bold;
+  font-size: 18px;
+  margin-top: 10px;
+}
 
-  input[type="submit"] {
-    color: white;
-  }
-/* end Login button */
-  section p
+.log:hover {
+  cursor: pointer;
+  opacity: 0.9;
+}
 
-  {
-    position: relative;
-    top: 202px;
-    left: 5%;
-    color: #102B3C;
-    font-size: 18px;
-    font-weight: bold;
+section p {
+  font-size: 18px;
+  color: #102B3C;
+  font-weight: bold;
+  margin-top: 30px;
+}
 
-  }
-section a
-{
-  text-decoration: none;
-  position: relative;
-  top: 164px;
-  left: 331px;
+section a {
+  font-size: 18px;
   color: #102B3C;
   font-weight: bold;
   font-size: 18px;
