backend file to run smoothly with database  On branch backend-implementations  Changes to be committed: 	modified:   Home/css/style.css 	modified:   Home/index.php 	new file:   Home/utility/create_post.php 	new file:   Home/utility/db_connection.php 	new file:   Home/utility/user_login.php 	new file:   Home/utility/user_signup.php

--- a/Home/css/style.css
+++ b/Home/css/style.css
@@ -242,7 +242,9 @@ button {
 
 
 /**-- heading section --**/
-
+body {
+     font-family: "Nasalization", sans-serif;
+   }
 
 /*---------------------------- preloader area ----------------------------*/
 
