--- a/css/all_posts.css
+++ b/css/all_posts.css
@@ -3,7 +3,12 @@
     padding-bottom: 0%;
     max-height: min-content;
 }
- 
+
+.card:hover {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+}
+    
+    
 .card-img-top {
     display: block;
     margin-left: auto;
@@ -32,3 +37,4 @@
     margin-bottom: 1.5rem;
     margin-top: 1.5rem;
 }
+
