--- a/css/all_posts.css
+++ b/css/all_posts.css
@@ -1,3 +1,9 @@
+.logo {
+    width:150px;
+    margin-right: auto;
+    margin-left: -8%;
+}
+
 .card {
     height: 98%;
     padding-bottom: 0%;
@@ -5,7 +11,7 @@
 }
 
 .card:hover {
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
     
     
@@ -38,3 +44,43 @@
     margin-top: 1.5rem;
 }
 
+.pagination {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    padding-left: 0;
+    list-style: none;
+    border-radius: 0.25rem; 
+}
+.heading-section {
+    font-size: 32px; 
+}
+.heading-section small {
+    font-size: 16px; 
+}  
+.block-27 ul {
+    padding: 0;
+    margin: 0; 
+}
+
+.block-27 ul li {
+    display: inline-block;
+    margin-bottom: 4px;
+    font-weight: 400; 
+}
+
+.block-27 ul li a, .block-27 ul li span {
+    color: gray;
+    text-align: center;
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    border-radius: 50%;
+    border: 1px solid #e6e6e6; 
+}
+.block-27 ul li.active a, .block-27 ul li.active span {
+    background:  #ED6C15;
+    color: #fff;
+    border: 1px solid transparent; 
+}
