--- a/css/all_posts.css
+++ b/css/all_posts.css
@@ -12,11 +12,6 @@
   padding: 4px 8px;
 }
 
-.container .input-group-text {
-  font-size: 14px;
-  height: 30px;
-  padding: 4px 8px;
-}
 
 @media (max-width: 991.98px) {
   .container select,
@@ -113,3 +108,92 @@
 }
 
 
+.e-button{
+    align-items: center;
+    background-color: #f8d5be;
+    border: 1px solid #f8d5b0;
+    border-radius: 11px;
+    box-sizing: border-box;
+    color: #ED6C15;
+    cursor: pointer;
+    display: flex;
+    font-weight: 500;
+    line-height: 33px;
+    padding: 2px 10px;
+    text-align: left;
+    touch-action: manipulation;
+    white-space: nowrap;
+    word-break: break-word;
+    -webkit-transition: max-width 0.3s ease-in-out;
+    -moz-transition: max-width 0.3s ease-in-out;
+    -o-transition: max-width 0.3s ease-in-out;
+    transition: max-width 0.3s linear;
+    position: relative;
+    float: left;
+    overflow: hidden;
+    max-width: 30px;
+    margin-right: 10px;
+}
+
+.e-button-text{
+    display:block;
+    white-space:nowrap;
+    color:#fff; 
+}
+
+.e-button span{
+    color:#ED6C15;
+}
+
+.e-button-text i {
+    display: inline;
+    margin-right: 10px;
+ }
+
+.e-button:hover{
+    max-width: 280px;
+    background-color: #f8d5be;
+    border-color: #efaf84;
+    box-shadow: rgba(0, 0, 0, 0.12) 0 1px 3px 0 inset;
+}
+
+/* filter */
+.btn-primary,
+.btn-outline-primary {
+  background-color: #ED6C15 !important;
+  border-color: #ED6C15!important;
+  color: #fff; 
+}
+.d-flex button.btn-primary,
+.d-flex button.btn-outline-primary {
+  background-color: #ED6C15!important;
+  border-color: #ED6C15!important;
+  color: #fff; 
+}
+.d-flex button.btn-primary:hover,
+.d-flex button.btn-outline-primary:hover {
+    background-color: #ef8e4e!important; 
+    border-color: #ef8e4e!important; 
+    box-shadow: 0 0 0 0.25rem rgba(255, 165, 0, 0.25) !important;
+    color: #fff; 
+}
+  
+    /* Change border color */
+    .form-control:focus {
+    border-color: #ED6C15;
+    box-shadow: 0 0 0 0.25rem rgba(255, 165, 0, 0.25);
+    }
+
+    /* Change range slider color */
+    .form-range::-webkit-slider-thumb {
+    background-color: #ED6C15;
+    }
+
+    .form-range::-moz-range-thumb {
+    background-color: #ED6C15;
+    }
+
+  
+
+ 
+ 
