--- a/css/all_posts.css
+++ b/css/all_posts.css
@@ -27,9 +27,11 @@
     box-shadow: 0 6px 10px rgba(0,0,0,.08), 0 0 6px rgba(0,0,0,.05);
     cursor: pointer;
     height: 98%;
+    width:110%;
     padding-bottom: 0%;
     max-height: min-content;
 }
+
 .card:hover {
     transform: scale(1.03);
     box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
