--- a/css/post.css
+++ b/css/post.css
@@ -1,34 +1,90 @@
-/* Style for post title */
-body {
-    font-family: "Nasalization", sans-serif;
-  }
-h1 {
-    font-size: 28px;
-    font-weight: bold;
-    color: #333;
-    margin-bottom: 20px;
-  }
-  
-  /* Style for post description */
-  p {
-    font-size: 16px;
-    color: #666;
-    line-height: 1.5;
-    margin-bottom: 10px;
-  }
-  
-  /* Style for post price */
-  .price {
-    font-size: 18px;
-    font-weight: bold;
-    color: #F00;
-    margin-bottom: 20px;
-  }
-  
-  /* Style for post image */
-  img {
-    max-width: 100%;
-    height: auto;
-    margin-bottom: 20px;
-  }
-  
+.car-container {
+  background-color: #205375;
+  border-radius: 24px;
+  padding: 20px;
+  border: 8px solid #ec6c15;
+  width:87%;
+  margin: 0 auto;
+}
+.car-post {
+
+  margin-bottom: 40px;
+  box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+  border-radius: 20px;
+  font-family: 'Nasalization', sans-serif;
+  padding: 20px;
+}
+
+
+.car-title {
+  font-size: 42px;
+  font-weight: bold;
+  margin-bottom: 20px;
+  color: #FFA500;
+  text-transform: uppercase;
+}
+
+.car-description {
+  font-size: 22px;
+  font-style: italic;
+  margin-bottom: 20px;
+  color: #FFFFFF;
+}
+
+.car-price {
+  font-size: 32px;
+  font-weight: bold;
+  margin-bottom: 20px;
+  color: #FFFFFF;
+}
+
+.car-info {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  font-size: 24px;
+  line-height: 1.5;
+  color: #FFFFFF;
+  font-family: cursive;
+}
+
+.car-info li {
+  margin-bottom: 10px;
+}
+
+.car-info li strong {
+  font-weight: bold;
+  color: #FFA500;
+  text-transform: uppercase;
+}
+
+.image-container {
+  display: flex;
+  align-items: center;
+}
+
+.big-image {
+  max-width: 61%;
+  margin-right: 20px;
+  border-radius: 20px;
+}
+
+.small-images {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.column {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 50%;
+}
+
+.column img {
+  width: 100%;
+  height: 183px;
+  object-fit: cover;
+  margin-bottom: 5px;
+  border-radius: 10px;
+}
