--- a/css/style.css
+++ b/css/style.css
@@ -311,6 +311,7 @@ header li {
 }
 
 
+
 /*-- header area --*/
 
 
@@ -406,7 +407,7 @@ header .container-fluid {
 .banner_main {
     background: white;
     background-repeat: no-repeat;
-    min-height: 700px;
+    min-height: 500px;
     background-size: 100% 100%;
     display: flex;
     justify-content: center;
@@ -587,7 +588,7 @@ header .container-fluid {
 
 .search {
     position: absolute;
-    top: 540px;
+    top: 600px;
     width: 80%;
     height: 60px;
     background: rgba(32, 83, 117, 0.69);
@@ -597,17 +598,26 @@ header .container-fluid {
     padding: 15px 60px;
 }
 
+::placeholder
+{
+    color: #fff;
+}
+
 .search-logo {
     font-size: 20px;
     color: white;
+    position: absolute;
+    left: 2%;
 
 }
+
 
 .search-filter
 {
     background-color: transparent;
     outline: none;
     border: 0px;
+    color: #fff;
 
 }
 
@@ -621,7 +631,7 @@ header .container-fluid {
 .wedo {
     padding-top: 70px;
     position: relative;
-    top: -50px;
+    top: 50px;
     
 }
 
@@ -739,6 +749,7 @@ footer {
     background: #141629;
     overflow: hidden;
     height: 300px;
+    margin-top: 100px;
 }
 
 .socialmedia {
