--- a/css/post.css
+++ b/css/post.css
@@ -14,7 +14,12 @@ body {
     background-color: #f2f2f2;
 }
 
+.date
+{ position: relative;
+    left: 89%;
+    top: -5%;}
 
+    
 .car-container {
     background-color: #205375;
     border-radius: 24px;
