--- a/css/all_posts.css
+++ b/css/all_posts.css
@@ -1,5 +1,11 @@
+:root {
+    --primary-color: #ED6C15;
+    --secondary-color: #f8d5be;
+    --border-color: #f8d5b0;
+}
+
 .logo {
-    width:150px;
+    width: 150px;
     margin-right: auto;
     margin-left: -8%;
 }
@@ -7,27 +13,29 @@
 /*Filter nav*/
 .container select,
 .container input[type="text"] {
-  font-size: 14px;
-  height: 30px;
-  padding: 4px 8px;
-}
-/* search icon */
-button#button-addon1 ion-icon {
-    color: #102B3C;
+    font-size: 14px;
+    height: 30px;
+    padding: 4px 8px;
 }
 
-@media (max-width: 991.98px) {
-  .container select,
-  .container input[type="text"],
-  .container .input-group-text {
-    font-size: 12px;
-    height: 28px;
-    padding: 3px 6px;
-  }
+/* search icon */
+button#button-addon1 ion-icon {
+    color: var(--primary-color);
 }
+
+@media (max-width: 900px) {
+    .container select,
+    .container input[type="text"],
+    .container .input-group-text {
+        font-size: 12px;
+        height: 28px;
+        padding: 3px 6px;
+    }
+}
+
 .card {
     background: #fff;
-    box-shadow: 0 6px 10px rgba(0,0,0,.08), 0 0 6px rgba(0,0,0,.05);
+    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.08), 0 0 6px rgba(0, 0, 0, 0.05);
     cursor: pointer;
     height: 98%;
     width: 110%;
@@ -37,10 +45,9 @@ button#button-addon1 ion-icon {
 
 .card:hover {
     transform: scale(1.03);
-    box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.12), 0 4px 8px rgba(0, 0, 0, 0.06);
 }
 
-    
 .card-img-top {
     display: block;
     margin-left: auto;
@@ -78,12 +85,15 @@ button#button-addon1 ion-icon {
     list-style: none;
     border-radius: 0.25rem; 
 }
+
 .heading-section {
     font-size: 32px; 
 }
+
 .heading-section small {
     font-size: 16px; 
 }  
+
 .block-27 ul {
     padding: 0;
     margin: 0; 
@@ -105,20 +115,20 @@ button#button-addon1 ion-icon {
     border-radius: 50%;
     border: 1px solid #e6e6e6; 
 }
+
 .block-27 ul li.active a, .block-27 ul li.active span {
-    background:  #ED6C15;
+    background: var(--primary-color);
     color: #fff;
     border: 1px solid transparent; 
 }
 
-
-.e-button{
+.e-button {
     align-items: center;
-    background-color: #f8d5be;
-    border: 1px solid #f8d5b0;
+    background-color: var(--secondary-color);
+    border: 1px solid var(--border-color);
     border-radius: 11px;
     box-sizing: border-box;
-    color: #ED6C15;
+    color: var(--primary-color);
     cursor: pointer;
     display: flex;
     font-weight: 500;
@@ -139,24 +149,24 @@ button#button-addon1 ion-icon {
     margin-right: 10px;
 }
 
-.e-button-text{
+.e-button-text {
     display:block;
     white-space:nowrap;
     color:#fff; 
 }
 
-.e-button span{
-    color:#ED6C15;
+.e-button span {
+    color: var(--primary-color);
 }
 
 .e-button-text i {
     display: inline;
     margin-right: 10px;
- }
+}
 
-.e-button:hover{
+.e-button:hover {
     max-width: 280px;
-    background-color: #f8d5be;
+    background-color: var(--secondary-color);
     border-color: #efaf84;
     box-shadow: rgba(0, 0, 0, 0.12) 0 1px 3px 0 inset;
 }
@@ -164,16 +174,19 @@ button#button-addon1 ion-icon {
 /* filter */
 .btn-primary,
 .btn-outline-primary {
-  background-color: #ED6C15 !important;
-  border-color: #ED6C15!important;
-  color: #fff; 
+    background-color: var(--primary-color) !important;
+    border-color: var(--primary-color) !important;
+    color: #fff; 
 }
+
 .d-flex button.btn-primary,
 .d-flex button.btn-outline-primary {
-  background-color: #ED6C15!important;
-  border-color: #ED6C15!important;
-  color: #fff; 
+    background-color: var(--primary-color) !important;
+    border-color: var(--primary-color) !important;
+    color: #fff; 
+    margin: 10px;
 }
+
 .d-flex button.btn-primary:hover,
 .d-flex button.btn-outline-primary:hover {
     background-color: #ef8e4e!important; 
@@ -181,23 +194,18 @@ button#button-addon1 ion-icon {
     box-shadow: 0 0 0 0.25rem rgba(255, 165, 0, 0.25) !important;
     color: #fff; 
 }
-  
-    /* Change border color */
-    .form-control:focus {
-    border-color: #ED6C15;
+
+/* Change border color */
+.form-control:focus {
+    border-color: var(--primary-color);
     box-shadow: 0 0 0 0.25rem rgba(255, 165, 0, 0.25);
-    }
+}
 
-    /* Change range slider color */
-    .form-range::-webkit-slider-thumb {
-    background-color: #ED6C15;
-    }
+/* Change range slider color */
+.form-range::-webkit-slider-thumb {
+    background-color: var(--primary-color);
+}
 
-    .form-range::-moz-range-thumb {
-    background-color: #ED6C15;
-    }
-
-  
-
- 
- 
+.form-range::-moz-range-thumb {
+    background-color: var(--primary-color);
+}
