--- a/css/post.css
+++ b/css/post.css
@@ -10,16 +10,17 @@
     padding: 0;
     box-sizing: border-box;
 }
+
 body {
     background-color: #f2f2f2;
 }
 
-.date
-{ position: relative;
+.date {
+    position: relative;
     left: 89%;
-    top: -5%;}
+    top: -5%;
+}
 
-    
 .car-container {
     background-color: #205375;
     border-radius: 24px;
@@ -95,6 +96,7 @@ body {
 }
 
 .small-images {
+    align-items: center;
     display: flex;
     flex-wrap: wrap;
 }
@@ -171,9 +173,7 @@ body {
     padding: 15px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     width: 80%;
-
 }
-
 
 .no-comment,
 .comment a {
@@ -188,7 +188,6 @@ body {
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
     text-align: left;
 }
-
 
 .comment p {
     margin-top: 0;
