--- a/assets/css/all_posts.css
+++ b/assets/css/all_posts.css
@@ -3,7 +3,7 @@
     --secondary-color: #f8d5be;
     --border-color: #f8d5b0;
 }
-
+ 
 .logo {
     width: 150px;
     margin-right: auto;
@@ -61,13 +61,20 @@ button#button-addon1 ion-icon {
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.12), 0 4px 8px rgba(0, 0, 0, 0.06);
 }
 
-.card-img-top {
+.card-img-top{
+    width: 420px; /* Adjust the width and height as per your requirements */
+    height: 250px;
+}
+
+.card-img-top img{
     display: block;
     margin-left: auto;
     margin-right: auto;
     width: 100%;
+    height: 100%;
     min-height: 60%;
     object-fit: cover;
+    object-position: center;
 }
 
 .card-title {
