--- a/assets/css/post.css
+++ b/assets/css/post.css
@@ -18,17 +18,10 @@ body {
 .date {
     position: relative;
     left: 89%;
-<<<<<<< HEAD:css/post.css
-    top: -5%;
-}
-
-.car-container {
-=======
     top: -5%;}
     
     
     .car-container {
->>>>>>> mvc:assets/css/post.css
     background-color: #205375;
     border-radius: 24px;
     padding: 20px;
@@ -99,14 +92,16 @@ body {
 }
 
 .big-image {
-    max-width: 61%;
+    max-width: 95%;
     margin-right: 20px;
     border-radius: 20px;
+    max-height: 500px;
 }
 
 .small-images {
     align-items: center;
     display: flex;
+    flex-direction: row;
     flex-wrap: wrap;
 }
 
@@ -115,7 +110,7 @@ body {
 }
 
 .column img {
-    width: 100%;
+    width: 98%;
     height: 183px;
     object-fit: cover;
     margin-bottom: 5px;
@@ -221,21 +216,8 @@ body {
     text-transform: uppercase;
 }
 
-<<<<<<< HEAD:css/post.css
-.footer {
-    background-color: #205375;
-    padding: 20px;
-    text-align: center;
-    color: white;
+.big 
+{
+    width: 50%;
+    height: 50%;
 }
-
-.footer a {
-    color: white;
-    text-decoration: none;
-}
-
-.footer a:hover {
-    text-decoration: underline;
-}
-=======
->>>>>>> mvc:assets/css/post.css
