--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -225,28 +225,6 @@ body {
 
 /*---------------------------- preloader area ----------------------------*/
 
-.loader_bg {
-    position: fixed;
-    z-index: 9999999;
-    background: #fff;
-    width: 100%;
-    height: 100%;
-}
-
-.loader {
-    height: 100%;
-    width: 100%;
-    position: absolute;
-    left: 0;
-    top: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.loader img {
-    width: 280px;
-}
 
 ul.btn {
     float: right;
@@ -294,90 +272,6 @@ header li {
 
 
 /*--------------------------------------------------------------------- top banner area ---------------------------------------------------------------------*/
-
-
-/*--------------------------------------------------------------------- layout new css ---------------------------------------------------------------------*/
-
-
-/*-- navigation--*/
-
-/* .navigation.navbar {
-    float: right;
-    padding-top: 17px;
-}
-
-.navigation.navbar-dark .navbar-nav .nav-link {
-    padding: 0 25px;
-    border: 1px solid #ED6C15;
-    border-radius: 20px;
-    font-size: 17px;
-    line-height: 20px;
-    font-weight: 600;
-    color: #102B3C;
-}
-
-.navigation.navbar-dark .navbar-nav .nav-link:focus,
-.navigation.navbar-dark .navbar-nav .nav-link:hover {
-    color: white;
-}
-
-.navigation.navbar-dark .navbar-nav .active>.nav-link,
-.navigation.navbar-dark .navbar-nav .nav-link.active,
-.navigation.navbar-dark .navbar-nav .nav-link.show,
-.navigation.navbar-dark .navbar-nav .show>.nav-link {
-    color: #102B3C;
-}
-
-.navbar-expand-md .navbar-nav {
-    padding-right: 10px;
-}
-
-.padd_right {
-    padding-right: 10px;
-}
-
-.header {
-    width: 100%;
-    padding: 20px 30px;
-    border-bottom: #205375 solid 20px;
-    background-image: linear-gradient(to bottom, #D9D9D9, #D9D9D9);
-    height: 80px;
-}
-
-header .container-fluid {
-    position: absolute;
-    top: 3px;
-}
-
-.logo {
-    position: absolute;
-    top: 55px;
-}
-
-.Souk {
-    position: absolute;
-    bottom: -20px;
-    font-size: 33px;
-    line-height: 92px;
-    color: #205375;
-    font-weight: bold;
-}
-
-.Auto {
-    position: absolute;
-    left: 85px;
-    bottom: -20px;
-    font-size: 33px;
-    line-height: 92px;
-    color: #ED6C15;
-    font-weight: bold;
-}
-
-.welcome {
-    position: relative;
-    top: 20px;
-    left: 180px;
-} */
 
 
 /** banner section **/
@@ -609,16 +503,10 @@ header .container-fluid {
 }
 
 .work_text {
-    position: absolute;
     z-index: 9999;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
     margin: 0 auto;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    text-align: center;
+    width: max-content;
     opacity: 0;
     transition: ease-in all 0.5s;
     cursor: pointer;
@@ -646,17 +534,18 @@ header .container-fluid {
     margin-bottom: 30px;
 }
 
-.work_text:hover {
+.work h3:hover {
     opacity: 1;
     transition: ease-in all 0.5s;
-    background: #1f1f1f;
 
 }
 
-.work_text h3 {
+.work h3 {
+    text-align: center;
+    top: 50%;
+    width: max-content;
     color: #fff;
     font-size: 25px;
-    line-height: 28px;
     font-weight: 700;
     padding-bottom: 10px;
     text-transform: uppercase;
