--- a/assets/css/postform.css
+++ b/assets/css/postform.css
@@ -15,13 +15,17 @@ a,
     transition: all .3s ease-in-out;
 }
 
-img {
-    max-width: 100%;
-    height: auto;
-}
-
-:focus {
-    outline: 0;
+.form-title {
+    font-family: 'Nasalization', sans-serif;
+    text-transform: uppercase;
+    color: #2b495e;
+    font-size: 40px;
+    line-height: 68px;
+    font-weight: 700;
+    padding-bottom: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 button {
@@ -30,53 +34,11 @@ button {
     padding: 0;
     cursor: pointer;
 }
-.header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    height: 80px;
-    padding: 20px 30px;
-    background-image: linear-gradient(to bottom, #D9D9D9, #D9D9D9);
-    border-bottom: #205375 solid 20px;
-}
-  
+
 .logo {
     position: absolute;
     top: 55px;
 }
-  
-.Posting {
-    position: absolute;
-    width: 200px;
-    height: 40px;
-    left: 1080px;
-    top: 0;
-}
-  
-.PostingAd {
-    position: absolute;
-    width: 343px;
-    height: 64px;
-    left: 0px;
-    top: 0px;
-    font-style: normal;
-    font-weight: BOLD;
-    font-size: 30px;
-    line-height: 92px;
-    color: #000000;
-}
-
-.content {
-    position: absolute;
-    width: 430px;
-    height: 81px;
-    left: 128px;
-    top: 227px;
-}
-
-
-
 
 .name {
     position: absolute;
@@ -106,33 +68,6 @@ button {
     transition: box-shadow 0.3s ease, transform 0.3s ease;
 }
 
-.year {
-    position: absolute;
-    width: 250x;
-    height: 44px;
-    left: -42px;
-    top: 400px;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 20px;
-    line-height: 54px;
-    text-align: center;
-}
-
-.year2 {
-    position: absolute;
-    width: 300px;
-    height: 44px;
-    left: -42px;
-    top: 450px;
-    border: 2px solid #81B29A;
-    border-radius: 5px;
-    padding: 10px;
-    font-size: 16px;
-    box-shadow: 1px 1px 2px rgba(32, 83, 117, 0.68);
-    background: rgba(32, 83, 117, 0.68);
-    transition: box-shadow 0.3s ease, transform 0.3s ease;
-}
 
 .price {
     position: absolute;
@@ -204,11 +139,10 @@ button {
 }
 
 .desc2 {
-    position: absolute;
+    position:relative;
     width: 300px;
     height: 90px;
     left: -42px;
-    top: 550px;
     border: 2px solid #81B29A;
     border-radius: 5px;
     padding: 10px;
@@ -220,18 +154,19 @@ button {
 
 button[type="submit"] {
     position: absolute;
-    width: 300px;
-    height: 44px;
-    left: 39%;
-    top: 85%;
-    border: 2px solid #81B29A;
-    border-radius: 10px;
-    padding: 10px;
-    font-size: 16px;
+    width: 250px;
+    padding: 10px 0px;
+    font-size: 23px;
     box-shadow: 1px 1px 2px rgba(32, 83, 117, 0.68);
     background: #F66B02;
     transition: box-shadow 0.3s ease, transform 0.3s ease;
-    
+    font-family: 'Nasalization', sans-serif;
+    border: 1px solid grey;
+    color: #fff !important;
+    text-align: center;
+    display: inline-block;
+    border-radius: 15px;
+    font-weight: 500;
 }
 
 button[type="submit"]:hover {
@@ -245,13 +180,13 @@ input:hover {
     cursor: pointer;
     box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.4);
     transform: translateY(-3px);
-    border: 2px solid #81B29A;
+    border: 2px solid #F66B02;
 }
 
 input:focus {
     outline: none;
-    border-color: #81B29A;
-    box-shadow: 0 0 5px#81B29A;
+    border-color: #F66B02;
+    box-shadow: 0 0 5px#ffcca6;
 }
 
 .content {
@@ -268,28 +203,12 @@ input:focus {
     left: 20%;
 }
 
-.decor {
-    position: absolute;
-    left: 800px;
-    top: 100px;
-}
 body {
     font-family: "nasalization", sans-serif;
 }
 
-header {
-    position: fixed;
-    z-index: 99;
-    top: 0px;
-    width: 100%;
-    left: 0;
-    height: 60px;
-    background-color: #D9D9D9;
-
-    border-bottom: 15px solid #205375;
-}
-
 input::placeholder {
+    margin-top: 2px;
     font-size: 15px;
     color: #999;
 }
@@ -317,7 +236,7 @@ section label {
 }
 
 section {
-    position: absolute;
+    position:static;
     top: 85px;
     height: 600px;
     display: flex;
@@ -327,13 +246,11 @@ section {
 }
 
 
-section div {
-    position: relative;
+.form1 div {
+    position:relative;
     width: 40%;
-
     height: 45px;
     border-radius: 12px;
-
     border: none;
 }
 
@@ -348,13 +265,13 @@ section select {
     width: 50%;
     background-color: #EFEFEF;
     height: 45px;
+    border-radius: 5px;
     position: absolute;
     right: 30%;
     margin-top: 20px;
+    margin-left: 3px;
     border: none;
 }
-
-
 
 
 .btn:hover {
