--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -494,24 +494,57 @@ header li {
     color: #ED6C15;
 }
 
-.work img:hover {
-    opacity: 0.5 !important;
+.work {
+    position: relative;
 }
 
-.work figure {
-    margin: 0;
+.image-container {
+    position: relative;
 }
 
-.work_text {
-    z-index: 9999;
-    margin: 0 auto;
-    text-align: center;
-    width: max-content;
+/* .image-container img {
+    opacity: 1;
+    transition: opacity 0.3s ease;
+} */
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     opacity: 0;
-    transition: ease-in all 0.5s;
+    background: radial-gradient(circle, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7));
+    font-family: 'Nasalization', sans-serif;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    transition: opacity 0.3s ease;
     cursor: pointer;
 }
 
+.overlay h3 {
+    opacity: 0;
+    /* transition: opacity 0.3s ease; */
+    margin-bottom: 0;
+}
+
+.image-container:hover .overlay {
+    opacity: 1;
+    transition: opacity ease-in 0.3s;
+
+}
+
+/* .image-container:hover img {
+    opacity: 0.5;
+} */
+
+.image-container:hover .overlay h3 {
+    opacity: 1;
+    transition: opacity 0, 3s ease-in;
+}
 .square-image {
     width: 420px; /* Adjust the width and height as per your requirements */
     height: 250px;
@@ -532,24 +565,6 @@ header li {
 
 .margin_bottom {
     margin-bottom: 30px;
-}
-
-.work h3:hover {
-    opacity: 1;
-    transition: ease-in all 0.5s;
-
-}
-
-.work h3 {
-    text-align: center;
-    top: 50%;
-    width: max-content;
-    color: #fff;
-    font-size: 25px;
-    font-weight: 700;
-    padding-bottom: 10px;
-    text-transform: uppercase;
-    background: #1f1f1f;
 }
 
 .blu {
