--- a/assets/css/postform.css
+++ b/assets/css/postform.css
@@ -188,7 +188,7 @@ input:focus {
     left: 50%;
     transform: translate(-50%, -50%);
     width: 100%;
-    height: 1000px;
+    height: 100%;
 }
 
 .form {
@@ -282,161 +282,4 @@ section select {
     transform: translateX(-50%);
     margin: 0 auto;
 }
-
-footer {
-    position: relative;
-    overflow: hidden;
-    height: 300px;
-    margin-top: 100px;
-
-}
-
-.mb-4
-{
-    font-family: "Nasalization", sans-serif;
-
-}
-
-.socialmedia {
-    position: absolute;
-    left: 60px;
-    top: 20px;
-    height: 800px;
-    width: 200px;
-}
-
-#MediaLabel {
-    position: absolute;
-    font-size: 25px;
-}
-
-.socialmedia a {
-    font-size: 20px;
-    color: #666666;
-}
-
-.socialmedia a:hover {
-    color: #ED6C15;
-}
-
-#facebook:hover {
-    color: #ED6C15;
-}
-
-#instagram:hover {
-    color: #ED6C15;
-}
-
-#linkedin:hover {
-    color: #ED6C15;
-}
-
-#facebook {
-    position: absolute;
-    top: 50px;
-    left: 70px;
-}
-
-#instagram {
-    position: absolute;
-    top: 100px;
-    left: 70px;
-}
-
-#linkedin {
-    position: absolute;
-    top: 150px;
-    left: 70px;
-}
-
-.contactus {
-    position: absolute;
-    left: 600px;
-    top: 20px;
-    height: 800px;
-    width: 200px;
-}
-
-#ContactLabel {
-    position: absolute;
-    font-family: "Nasalization", sans-serif;
-    font-size: 25px;
-}
-
-.contactus a {
-    font-size: 20px;
-    color: #666666;
-}
-
-.contactus a:hover {
-    color: #ED6C15;
-}
-
-#email {
-    position: absolute;
-    top: 50px;
-    left: 70px;
-}
-
-#email:hover {
-    color: #ED6C15;
-}
-
-#phone {
-    position: absolute;
-    top: 100px;
-    left: 70px;
-}
-
-#phone:hover {
-    color: #ED6C15;
-}
-
-.aboutus {
-    position: absolute;
-    left: 1000px;
-    top: 20px;
-    height: 800px;
-    width: 200px;
-}
-
-#AboutLabel {
-    position: absolute;
-    font-family: "Nasalization", sans-serif;
-    font-size: 25px;
-}
-
-.aboutus a {
-    font-size: 20px;
-    color: #666666;
-}
-
-.aboutus a:hover {
-    color: #ED6C15;
-}
-
-#TerCon {
-    position: absolute;
-    top: 50px;
-    left: 70px;
-    width: 250px;
-}
-
-#PrivPol {
-    position: absolute;
-    top: 100px;
-    left: 70px;
-    width: 250px;
-}
-footer {
-    background-color: #102B3C;
-  }
-
-  #contact a {
-    color: white !important;
-  }
-
-  #contact h5 {
-    color: #ED6C15;
-  }
 
