--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -530,24 +530,19 @@ header li {
     /* transition: opacity 0.3s ease; */
     margin-bottom: 0;
 }
-
 .image-container:hover .overlay {
     opacity: 1;
     transition: opacity ease-in 0.3s;
-
 }
-
-/* .image-container:hover img {
-    opacity: 0.5;
-} */
 
 .image-container:hover .overlay h3 {
     opacity: 1;
-    transition: opacity 0, 3s ease-in;
+    transition: opacity 0.3s ease-in;
 }
+
 .square-image {
-    width: 420px; 
-    height: 250px;
+    width: 26.25rem;
+    height: 15.625rem;
 }
 
 .square-image img {
@@ -561,6 +556,20 @@ header li {
 .square-image:hover img {
     opacity: 0.7 !important;
     transition: opacity 0.5s ease-in;
+}
+
+@media (max-width: 992px) {
+    .square-image {
+        width: 14rem;
+        height: 8rem;
+    }
+    .square-image img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: center;
+        opacity: 1;
+    }
 }
 
 .margin_bottom {
@@ -770,5 +779,9 @@ footer {
     background-color: #D9D9D9 !important;
 }
 
+ion-icon {
+    color: #fff !important;
+}
 
 /** end footer **/
+
